adding of some texts

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>blogger</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
+      <title>Piassa : Post All your things to sell nice and eassy</title>
+      <meta name="keywords" content="Piassa">
+      <meta name="description" content="A web site for selling your items online">
+      <meta name="author" content="BNTechology">
       <!-- bootstrap css -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- style css -->
@@ -85,8 +85,8 @@
                   <div class="row d_flex">
                      <div class=" col-xl-8 col-lg-8 col-md-8 col-12-9">
                         <div class="text-bg">
-                           <h1>Blog<br> <span class="white1">Landing Page 2019</span></h1>
-                           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
+                           <h1>Piassa<br> <span class="white1">Were the world Comes to Market</span></h1>
+                           <p>Piassa is ready to provide for every one nay where to sell and buy items. Out marking team is also availeble 24 7 to help you sell your items and find a potential buyer always stays on alert!!</p>
                            <a href="#">Read More</a>
                         </div>
                      </div>
